# Multiband_sampling

./: .gitignore  README.md  hexagon.py  params.txt
leblanc_codes/AMI/libamicalc/: CMakeLists.txt  compile.sh
leblanc_codes/AMI/libamicalc/src/: ami_calc.hpp  ami_calc_evaluate.cpp  ami_calc_io.cpp  ami_calc_spectral.cpp  ami_spec.cpp  ami_spec.hpp  ami_spec_eval.cpp  ami_spec_io.cpp  ami_spec_opt.cpp  ami_spec_sigma.cpp  linterp.h
leblanc_codes/AMI/minimal_ami/: CMakeLists.txt
leblanc_codes/AMI/minimal_ami/graphs/ggm_L_even/: o2_g0_n0.graph  o3_g0_n2.graph  o3_g1_n1.graph  o4_g10_n1.graph  o4_g1_n0.graph  o4_g1_n2.graph  o4_g3_n1.graph  o4_g3_n2.graph  o4_g4_n0.graph  o4_g4_n1.graph  o4_g4_n2.graph  o4_g4_n3.graph  o4_g4_n4.graph  o4_g4_n7.graph  o4_g5_n0.graph  o4_g6_n0.graph  o4_g6_n3.graph  o4_g7_n12.graph  o4_g7_n4.graph  o4_g7_n5.graph  o4_g7_n7.graph  o4_g7_n8.graph  o4_g8_n0.graph  o4_g9_n0.graph
leblanc_codes/AMI/minimal_ami/graphs/ggm_L_odd/: o2_g1_n0.graph  o3_g0_n0.graph  o3_g0_n2.graph  o3_g1_n0.graph  o3_g1_n1.graph  o3_g1_n2.graph  o4_g10_n2.graph  o4_g10_n3.graph  o4_g10_n4.graph  o4_g11_n0.graph  o4_g11_n2.graph  o4_g12_n0.graph  o4_g13_n1.graph  o4_g14_n3.graph  o4_g14_n4.graph  o4_g14_n6.graph  o4_g14_n7.graph  o4_g15_n3.graph  o4_g16_n1.graph  o4_g1_n1.graph  o4_g2_n0.graph  o4_g2_n1.graph  o4_g4_n0.graph  o4_g4_n1.graph  o4_g4_n2.graph  o4_g4_n3.graph  o4_g5_n0.graph  o4_g5_n3.graph  o4_g6_n3.graph  o4_g7_n3.graph  o4_g9_n0.graph  o4_g9_n1.graph
leblanc_codes/AMI/minimal_ami/graphs/ggm_L_ud_plus/: o1_g0_n0.graph  o2_g0_n0.graph  o3_g0_n0.graph  o3_g0_n1.graph  o3_g0_n2.graph  o3_g1_n0.graph  o3_g1_n1.graph  o3_g2_n0.graph  o3_g2_n1.graph  o3_g2_n2.graph  o3_g2_n3.graph  o3_g3_n0.graph  o3_g4_n0.graph  o4_g0_n0.graph  o4_g0_n1.graph  o4_g10_n1.graph  o4_g11_n0.graph  o4_g11_n1.graph  o4_g11_n2.graph  o4_g11_n3.graph  o4_g11_n4.graph  o4_g11_n5.graph  o4_g11_n6.graph  o4_g11_n7.graph  o4_g12_n0.graph  o4_g12_n1.graph  o4_g12_n2.graph  o4_g12_n3.graph  o4_g12_n4.graph  o4_g12_n5.graph  o4_g13_n0.graph  o4_g13_n1.graph  o4_g13_n2.graph  o4_g13_n3.graph  o4_g13_n4.graph  o4_g13_n5.graph  o4_g13_n6.graph  o4_g13_n7.graph  o4_g1_n2.graph  o4_g1_n3.graph  (+598 more)
leblanc_codes/AMI/minimal_ami/graphs/ggm_L_uu_plus/: o2_g0_n0.graph  o2_g1_n1.graph  o2_g2_n0.graph  o3_g0_n0.graph  o3_g0_n1.graph  o3_g1_n1.graph  o3_g1_n2.graph  o3_g2_n0.graph  o3_g2_n1.graph  o3_g2_n2.graph  o3_g2_n3.graph  o3_g3_n2.graph  o4_g0_n0.graph  o4_g10_n0.graph  o4_g12_n0.graph  o4_g12_n3.graph  o4_g13_n2.graph  o4_g14_n1.graph  o4_g15_n0.graph  o4_g15_n1.graph  o4_g15_n2.graph  o4_g15_n3.graph  o4_g15_n4.graph  o4_g16_n0.graph  o4_g16_n2.graph  o4_g16_n6.graph  o4_g16_n7.graph  o4_g17_n0.graph  o4_g17_n2.graph  o4_g17_n3.graph  o4_g18_n0.graph  o4_g18_n1.graph  o4_g18_n2.graph  o4_g19_n0.graph  o4_g19_n1.graph  o4_g19_n2.graph  o4_g19_n3.graph  o4_g19_n4.graph  o4_g19_n5.graph  o4_g19_n6.graph  (+687 more)
leblanc_codes/AMI/minimal_ami/graphs/ggm_all/: o2_g0_n0.graph  o3_g0_n0.graph  o3_g0_n1.graph  o4_g0_n1.graph  o4_g0_n2.graph  o4_g1_n0.graph  o4_g1_n1.graph  o4_g1_n2.graph  o4_g2_n0.graph  o4_g2_n1.graph  o4_g2_n2.graph  o4_g3_n0.graph  o4_g3_n1.graph  o4_g3_n2.graph  o5_g0_n0.graph  o5_g0_n1.graph  (+68 more)
leblanc_codes/AMI/minimal_ami/loader/: Hubbard_U.txt  New Text Document.txt  SRO_interaction.txt  bilayer_interaction.txt  ccpdvz_h.txt  extended_U.txt  generate_ext.py  h2sto_U.txt  h2sto_e0.txt  make_ext_vars_kxky.py  params.txt  quadlayer_interaction.txt  three_orb_U.txt  trilayer_interaction.txt
leblanc_codes/AMI/minimal_ami/src/: SRO_helper.cpp  helper.cpp  leetcod.py  mini_ami.hpp  mini_main.cpp  mini_main_2.cpp  mini_main_filter.cpp  mini_main_iso.cpp  molecule_solver.cpp  sparse_pp_sampler.cpp  sparse_sampler_sigma.cpp
leblanc_codes/AMI/minimal_ami/src_cluster/: SRO_helper.cpp  helper.cpp  mini_ami.hpp  mini_main.cpp  molecule_solver.cpp  sampler_ph.cpp  sparse_pp_sampler.cpp
leblanc_codes/AMI/minimal_ami/test/: 10band_ays.py  10band_o2_g0_n011test.txt  10band_o2_g0_n022test.txt  10band_o2_g0_n111test.txt  10band_o2_g0_n122test.txt  10band_o3_g0_n011test.txt  10band_o3_g0_n022test.txt  10band_o3_g0_n111test.txt  10band_o3_g0_n122test.txt  10band_o3_g0_n211test.txt  10band_o3_g0_n222test.txt  10band_o3_g0_n311test.txt  10band_o3_g0_n322test.txt  10band_o3_g0_n411test.txt  10band_o3_g0_n422test.txt  10band_o3_g0_n511test.txt  10band_o3_g0_n522test.txt  10band_o3_g0_n611test.txt  10band_o3_g0_n622test.txt  10band_o3_g0_n711test.txt  10band_o3_g0_n722test.txt  10band_o3_g0_n811test.txt  10band_o3_g0_n822test.txt  10band_o3_g0_n911test.txt  10band_o3_g0_n922test.txt  10band_o3_g1_n011test.txt  10band_o3_g1_n022test.txt  10band_o3_g1_n111test.txt  10band_o3_g1_n122test.txt  10band_o3_g1_n211test.txt  10band_o3_g1_n222test.txt  10band_o3_g1_n311test.txt  10band_o3_g1_n322test.txt
(+4918 files in other folders)
